--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,14 @@ services:
       - 5432
 
   redis:
-    image: redis
+    image: redis:6.2-alpine
+    restart: always
     ports:
-      - "6379:6379"
+      - '6379:6379'
+    volumes:
+      - redis:/data
 
 volumes:
   pgdata:
+  redis:
+
