--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "prisma:push": "prisma db push --accept-data-loss",
+    "prisma:push": "prisma db push --accept-data-loss --force-reset",
     "prisma:generate": "prisma generate",
     "prisma:format": "prisma format",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
